Task1/static/style.css
/* ! Adaptive markup is made until 375px. */

/* 1. General */
/* 2. Header */
/* 3. Main */
/* 3.2. Task 2 */
/* 3.3. Task 3 */

/* 1. General */
* {
  padding: 0;
  border: 0;
  margin: 0;
  font-family: "Open Sans", sans-serif;
}

@media (max-width: 1440px) {
  main > div,
  footer {
    padding-left: 12.5vw;
    padding-right: 12.5vw;
  }
}

@media (max-width: 1220px) {
  main > div,
  footer {
    padding-left: 10vw;
    padding-right: 10vw;
  }
}

@media (max-width: 768px) {
  main > div,
  footer {
    padding-left: 7.5vw;
    padding-right: 7.5vw;
  }
}

@media (max-width: 425px) {
  main > div,
  footer {
    padding-left: 5vw;
    padding-right: 5vw;
  }
}

/* 2. Header */
header {
  min-height: 15vh;

  display: flex;
  justify-content: space-around;

  border-bottom: 0.05rem black solid;
  background-color: rgb(246, 245, 241);
  font-weight: bolder;
  font-size: 1.5rem;
  color: rgb(0, 54, 78);
}

header > * {
  margin-top: auto;
  margin-bottom: auto;
}

.logo {
  width: 100px;
  height: 100px;
}

.burger-list {
  display: flex;
  justify-content: space-around;
  width: 55%;
}

.burger-list > li {
  margin-top: auto;
  margin-bottom: auto;
  text-align: center;
  display: inline-block;
  list-style: none;
  padding: 1rem 2rem;
  border-radius: 50em;
  transition: all 0.3s;
}

.burger-list > li:hover {
  background-color: rgb(0, 54, 78);
  color: rgb(246, 245, 241);
  cursor: pointer;
}

.burger-list > li:active {
  transform: scale(0.8);
}

.burger-icon > div {
  display: none;
  width: 25px;
  height: 5px;
  background-color: rgb(0, 54, 78);
  margin-top: 0.3rem;
  margin-bottom: 0.3rem;
}

.burger-icon:hover {
  cursor: pointer;
}

.burger-list > .close-button {
  display: none;
  position: absolute;
  cursor: pointer;
  width: 30px;
  right: 5vw;
  top: 5vw;
  color: white;
}

@media (max-width: 1440px) {
  header {
    border-bottom: none;
    justify-content: space-between;
  }

  .burger-icon {
    padding-right: 3rem;
  }

  .logo {
    padding-top: 1rem;
    padding-left: 3rem;
  }

  .burger-icon > div {
    display: block;
    position: static;
  }

  .burger-list > li {
    margin-left: auto;
    margin-right: auto;
    position: relative;
    padding: 0.8rem;
    margin-top: 1.5vh;
    margin-bottom: 1.5vh;
    color: white;
  }

  .burger-list > li::after {
    content: "";
    position: absolute;
    background-color: white;
    height: 0.2em;
    width: 0;
    left: 0;
    bottom: 1px;
    transition: 0.3s;
  }

  .burger-list > li:hover::after {
    width: 100%;
  }

  .burger-list {
    top: -200%;
    height: 100vh;
    width: 100vw;
    position: fixed;
    justify-content: center;
    background: rgb(0, 54, 78);
    transition: top 1s ease 0s;
    flex-direction: column;
  }
}

/* 3. Main */
main {
  background-color: rgb(246, 245, 241);
}

main > div {
  padding-left: 15vw;
  padding-right: 15vw;
  padding-top: 5vh;
  padding-bottom: 5vh;
  border-bottom: 0.05rem black solid;
}

main > div > h1 {
  padding-bottom: 1rem;
}

main > div > p {
  padding-bottom: 0.5rem;
}

@media (max-width: 768px) {
  main > div {
    text-align: center;
    padding-top: 10vw;
  }
}

/* 3.2. Task-2 */
main > div > div.css-picture {
  margin-left: auto;
  margin-right: auto;
  position: relative;
  width: 200px;
  height: 200px;
  border: 0.1vw solid black;
}

main > div > div.css-picture > div.abdomen {
  position: absolute;
  width: 80%;
  height: 40%;
  background: radial-gradient(circle at 20%, white, gray, gray), 100%;
  border-radius: 50%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1000;
}

main > div > div.css-picture > div.tail {
  position: absolute;
  width: 10%;
  height: 40%;
  left: 10%;
  top: 5%;
  background: radial-gradient(circle at top, white, gray, gray), 100%;
  border-radius: 50%;
  transform: rotate(-30deg);
}

main > div > div.css-picture > div.first-paw,
main > div > div.css-picture > div.second-paw,
main > div > div.css-picture > div.third-paw,
main > div > div.css-picture > div.fourth-paw {
  position: absolute;
  width: 0;
  height: 0;
  border-top-width: 20px;
  border-top-style: solid;
  border-top-color: transparent;
  border-right-width: 50px;
  border-right-style: solid;
  border-right-color: gray;
}

main > div > div.css-picture > div.first-paw {
  transform: rotate(-50deg);
  top: 60%;
}

main > div > div.css-picture > div.second-paw {
  transform: rotate(-90deg);
  top: 65%;
  left: 7%;
}

main > div > div.css-picture > div.third-paw {
  transform: rotate(-70deg);
  top: 70%;
  left: 50%;
}

main > div > div.css-picture > div.fourth-paw {
  transform: rotate(-100deg);
  top: 70%;
  left: 60%;
}

main > div > div.css-picture > div.head {
  position: absolute;
  width: 30%;
  height: 30%;
  right: 10%;
  top: 30%;
  border-radius: 50%;
  background-color: rgb(110, 109, 109);
  z-index: 1010;
}

main > div > div.css-picture > div.head > div.left-eye,
main > div > div.css-picture > div.head > div.right-eye {
  position: absolute;
  width: 30%;
  height: 10%;
  top: 30%;
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
  background-color: black;
}

main > div > div.css-picture > div.head > div.left-eye {
  left: 25%;
}

main > div > div.css-picture > div.head > div.right-eye {
  left: 65%;
}

main > div > div.css-picture > div.head > div.nose {
  position: absolute;
  width: 0;
  height: 0;
  left: 55%;
  top: 37.5%;
  border-top-width: 10px;
  border-top-style: solid;
  border-top-color: transparent;
  border-right-width: 10px;
  border-right-style: solid;
  border-right-color: black;
  transform: rotate(45deg);
}

main > div > div.css-picture > div.head > div.mouth-left-part,
main > div > div.css-picture > div.head > div.mouth-right-part {
  position: absolute;
  width: 15%;
  height: 3%;
  background-color: black;
  top: 65%;
}

main > div > div.css-picture > div.head > div.mouth-left-part {
  transform: rotate(-35deg);
  left: 50%;
}

main > div > div.css-picture > div.head > div.mouth-right-part {
  left: 60%;
  transform: rotate(35deg);
}

main > div > div.css-picture > div.left-ear,
main > div > div.css-picture > div.right-ear {
  position: absolute;
  width: 10%;
  height: 10%;
  top: 26%;
  border-radius: 50%;
  background: radial-gradient(circle at center, white, rgb(182, 182, 182), rgb(149, 149, 149)), 100%;
  z-index: 1001;
}

main > div > div.css-picture > div.left-ear {
  left: 60%;
}  

main > div > div.css-picture > div.right-ear {
  left: 78%;
}  

/* 3.3. Task 3 */
main > div > div.flexbox-task {
  width: 30%;
  margin-left: auto;
  margin-right: auto;
  transform: rotate(45deg);
  transition: all 0.3s ease 0s;
  display: flex;
  flex-direction: column;
}

main > div > div.flexbox-task > label > p {
  text-align: center;
  font-weight: bold;
  font-size: 2em;
}

main > div > div.flexbox-task:hover {
  transform: rotate(0deg);
}

._show-on-hover {
  display: none;
}

main > div > div.flexbox-task:hover > label > ._show-on-hover {
  display: block;
}

main > div > div.flexbox-task > label > div.firing-gun {
  display: flex;
  transition: all 10s ease;
}

._show-on-click {
  display: none;
}

#btn-control {
  display: none;
}

#btn-control:checked ~ label > ._show-on-click, 
#btn-control:checked ~ label > div.firing-gun > ._show-on-click {
  display: block;
}

#btn-control:checked ~ label > ._hide-on-click {
  display: none;
}

#btn-control:checked ~ label > div.firing-gun > #gun {
  animation: vertical-shaking 0.7s infinite;
}

@keyframes vertical-shaking {
  0% { transform: translateY(0) }
  25% { transform: translateY(5px) }
  50% { transform: translateY(-5px) }
  75% { transform: translateY(5px) }
  100% { transform: translateY(0) }
}

#btn-control:checked ~ label > div.firing-gun > #bullet {
  animation: 1s linear 0s infinite running slidein;
}

@keyframes slidein {
  from {
    transform: translateX(-50%);
  }

  to {
    transform: translateX(20%);
  }
}

@media (max-width: 1024px) {
  main > div > div.flexbox-task {
    width: 50%;
  }
}

@media (max-width: 768px) {
  main > div > div.flexbox-task {
    width: 90%;
  }

  @keyframes slidein {
    from {
      transform: translateX(-100%);
    }

    to {
      transform: translateX(0%);
    }
  }
}

/* 4. Footer */
footer {
  padding-left: 15vw;
  padding-right: 15vw;
  padding-top: 3vh;
  padding-bottom: 3vh;
  background-color: rgb(0, 54, 78);
  color: white;
  font-weight: 500;
}

